--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
+.header {
+  position: relative;
+  width:100%;
+  background-color:rgba(3, 1, 12, 0.87);
+  height:100px;
+  padding-top: 40px;
+  padding-left: 20% ;
+}
+.repo{
+  width:90%;
   text-align: center;
+  padding-left: 10%;
+  padding-top: 2%;
+  padding-bottom: 1%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user{
+  width:75%;
+  text-align: center;
+  padding-left:30% ;
+  padding-top: 2%;
 }
